--- a/user-failure-analysis/docker-compose.yml
+++ b/user-failure-analysis/docker-compose.yml
@@ -6,13 +6,32 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: user-failure-stats
+    ports:
+      - "8000:8000"
     volumes:
       - ./output:/app/output
     environment:
+      # Database Configuration
       - DB_URL=${DB_URL}
-      - START_DATE=${START_DATE:-2025-05-20 18:30:00}
-      - END_DATE=${END_DATE:-2025-05-22 18:29:59}
       - DB_CONNECTION_TIMEOUT=30
       - DB_QUERY_TIMEOUT=60
       - DB_MAX_RETRIES=3
-    restart: on-failure 
+      
+      # Azure Storage Configuration
+      - AZURE_STORAGE_CONNECTION_STRING=${AZURE_STORAGE_CONNECTION_STRING}
+      - AZURE_STORAGE_CONTAINER=user-failure-reports
+      
+      # Cache Configuration
+      - CACHE_DURATION_HOURS=24
+      - FORCE_REFRESH=${FORCE_REFRESH:-false}
+      
+      # Application Configuration
+      - PORT=8000
+      - LOG_LEVEL=${LOG_LEVEL:-INFO}
+      - ENVIRONMENT=${ENVIRONMENT:-production}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    restart: unless-stopped 
