--- a/user-failure-analysis/requirements.txt
+++ b/user-failure-analysis/requirements.txt
@@ -1,12 +1,15 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-python-dotenv==1.0.0
-pandas==2.1.3
-numpy==1.26.2
-plotly==5.18.0
+# DO NOT include azure-functions-worker in this file
+# The Python Worker is managed by Azure Functions platform
+# Manually managing azure-functions-worker may cause unexpected issues
+
+azure-functions
 azure-storage-blob==12.19.0
-python-multipart==0.0.6
 azure-identity==1.15.0
-azure-functions==1.17.0
+pandas==2.1.3
+plotly==5.18.0
+python-dotenv==1.0.0
+python-multipart==0.0.6
 pydantic==2.5.1
-psycopg2-binary==2.9.9 
+psycopg2-binary==2.9.7
+uvicorn==0.24.0
+fastapi
