--- a/user-failure-analysis/requirements.txt
+++ b/user-failure-analysis/requirements.txt
@@ -2,14 +2,23 @@
 # The Python Worker is managed by Azure Functions platform
 # Manually managing azure-functions-worker may cause unexpected issues
 
+# Azure Functions
 azure-functions
 azure-storage-blob==12.19.0
 azure-identity==1.15.0
+
+# Data Processing
 pandas==2.1.3
 plotly==5.18.0
+
+# Environment and Configuration
 python-dotenv==1.0.0
 python-multipart==0.0.6
 pydantic==2.5.1
+
+# Database
 psycopg2-binary==2.9.7
-uvicorn==0.24.0
+
+# Web Framework
 fastapi
+uvicorn
